--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,41 @@
 # Object files
-*.o
-*.ko
-*.obj
-*.elf
+**/*.o
+**/*.ko
+**/*.obj
+**/*.elf
 
 # Precompiled Headers
-*.gch
-*.pch
+**/*.gch
+**/*.pch
 
 # Libraries
-*.lib
-*.a
-*.la
-*.lo
+**/*.lib
+**/*.a
+**/*.la
+**/*.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+**/*.dll
+**/*.so
+**/*.so.*
+**/*.dylib
 
 # Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+**/*.exe
+**/*.out
+**/*.app
+**/*.i*86
+**/*.x86_64
+**/*.hex
 
 # Debug files
-*.dSYM/
+**/*.dSYM/
+
+**/*.d
+**/core-bin
+**/*.tbl
+**/*~
+**/.cdskeyfile
+**/.reservedkeyfile
+**/.resetkeyfile
+
