--- a/config/softsim/CMakeLists.txt
+++ b/config/softsim/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 2.8)
 
-#Set the directory where all the build products are going to go.
-set(INSTALL_DIR	${CMAKE_CURRENT_BINARY_DIR}/sysroot/cf/apps)
+#Set the PSP and OS
+set(PSP "pc-linux")
+set(OS "posix")
 
-SET(CMAKE_AR ${CMAKE_CURRENT_SOURCE_DIR}/elf2cfetbl/elf2cfetbl)
-set(CMAKE_C_ARCHIVE_FINISH)
-SET(CMAKE_CXX_ARCHIVE_CREATE "<CMAKE_AR> <OBJECTS> ${INSTALL_DIR}")
-SET(CMAKE_C_ARCHIVE_CREATE "<CMAKE_AR> <OBJECTS> ${INSTALL_DIR}")
+#Set the directory where all the build products are going to go.
+set(INSTALL_DIR	${CMAKE_CURRENT_SOURCE_DIR}/sysroot/cf/apps)
+
+#Set the path to the elf2cfetbl utility
+set(ELF2CFETBL_PATH ${CMAKE_CURRENT_SOURCE_DIR}/elf2cfetbl)
 
 #Include the global mission and build specific include directories.
 include_directories(inc)
-include_directories(../mission_inc)
+include_directories($ENV{CFS_MISSION_INC})
 
 #Build the main CFE executable file.
 add_subdirectory(cfe cfe)
@@ -19,4 +21,4 @@ add_subdirectory(cfe cfe)
 add_subdirectory(elf2cfetbl elf2cfetbl)
 
 #Build each application and associated table(s)
-add_subdirectory(sch/build sch)
+add_subdirectory(sch sch)
