--- a/config/softsim/cfe/CMakeLists.txt
+++ b/config/softsim/cfe/CMakeLists.txt
@@ -1,5 +1,3 @@
-# Set the PSP and OSAL for this build
-
 # Set what we're going to call the executable file.
 set(CFE_EXEC_FILE core-bin)
 
@@ -29,3 +27,5 @@ SET(CMAKE_AR ${CMAKE_AR} PARENT_SCOPE)
 set(CMAKE_C_ARCHIVE_FINISH ${CMAKE_C_ARCHIVE_FINISH} PARENT_SCOPE)
 SET(CMAKE_CXX_ARCHIVE_CREATE ${CMAKE_CXX_ARCHIVE_CREATE} PARENT_SCOPE)
 SET(CMAKE_C_ARCHIVE_CREATE ${CMAKE_C_ARCHIVE_CREATE} PARENT_SCOPE)
+SET(UTF_SRC ${UTF_SRC} PARENT_SCOPE)
+SET(UTF_INCS ${UTF_INCS} PARENT_SCOPE)
