Updated cmake files to add a single project wide cmake file and allow a project wide build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,6 @@
-project(ARDroneCFS)
+cmake_minimum_required(VERSION 2.8)
+set(PROJECT_SOURCE_DIR .)
+
 enable_testing()
+
+add_subdirectory(config/softsim softsim)
