--- a/config/softsim/CMakeLists.txt
+++ b/config/softsim/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(ARDroneCFS)
 set(PROJECT_SOURCE_DIR $ENV{CFS_MISSION})
 enable_testing()
+set(BUILDNAME "SoftSim")
 
 # Set the PSP and OS
 set(PSP "pc-linux")
