Added environment variables to the main cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,25 @@
 cmake_minimum_required(VERSION 2.6.4)
 set(PROJECT_SOURCE_DIR .)
 
+set($ENV(CPUNAME) softsim)
+set($ENV(CFS_MISSION) ${CMAKE_CURRENT_BINARY_DIR})
+set($ENV(APP_DIR) $ENV(CFS_MISSION)/apps)
+set($ENV(CFE_DIR) $ENV(CFS_MISSION)/CFE)
+set($ENV(OSAL_DIR) $ENV(CFS_MISSION)/OSAL)
+set($ENV(PSP_DIR) $ENV(CFS_MISSION)/PSP)
+set($ENV(CFS_MISSION_INC) $ENV(CFS_MISSION)/config/mission_inc)
+set($ENV(CFS_APP_SRC) $ENV(APP_DIR))
+set($ENV(CFE_FSW) $ENV(CFE_DIR)/fsw)
+set($ENV(CFE_CORE_SRC) $ENV(CFE_DIR)/fsw/cfe-core/src)
+set($ENV(OSAL) $ENV(OSAL_DIR))
+set($ENV(OSAL_SRC) $ENV(OSAL_DIR)/src/os)
+set($ENV(CFE_PSP_SRC) $ENV(PSP_DIR)/fsw)
+set($ENV(MISSION) CFE_TST)
+set($ENV(CFE_UNIT_TEST) $ENV(CFE_DIR)/fsw/cfe-core/unit-test)
+set($ENV(CFE_TOOLS) $ENV(CFE_DIR)/tools)
+set($ENV(UTF_SRC) $ENV(CFE_DIR)/tools/utf)
+set($ENV(MISSION_TEMPLATE_VERSION) 3.0.1)
+
 enable_testing()
 
 add_subdirectory(config/softsim softsim)
