Initial commit of EIM code.

--- a/config/softsim/apps/CMakeLists.txt
+++ b/config/softsim/apps/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(mm mm)
 add_subdirectory(sc sc)
 add_subdirectory(sch sch)
 add_subdirectory(to to)
+add_subdirectory(eim eim)
 
 # Add target to generate all documentation.
 add_custom_target(docs
