--- a/config/softsim/CMakeLists.txt
+++ b/config/softsim/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 2.6.4)
 set(PROJECT_SOURCE_DIR $ENV{CFS_MISSION})
 enable_testing()
 set(BUILDNAME "SoftSim")
+project(softsim)
+
+add_subdirectory(../.. main)
+#include(../../CMakeLists.txt)
 
 # Set the PSP and OS
 set(PSP "pc-linux")
