--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -52,6 +52,59 @@ environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.1401253775/UTF
 environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.1401253775/UTF_SRC/value=${CFE_DIR}/tools/utf
 environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.1401253775/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.1401253775/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/APP_DIR/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/APP_DIR/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/APP_DIR/value=${CFS_MISSION}/apps
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_CORE_SRC/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_CORE_SRC/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_CORE_SRC/value=${CFE_DIR}/fsw/cfe-core/src
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_DIR/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_DIR/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_DIR/value=${CFS_MISSION}/CFE
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_FSW/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_FSW/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_FSW/value=${CFE_DIR}/fsw
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_PSP_SRC/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_PSP_SRC/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_PSP_SRC/value=${PSP_DIR}/fsw
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_TOOLS/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_TOOLS/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_TOOLS/value=${CFE_DIR}/tools
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_UNIT_TEST/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_UNIT_TEST/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFE_UNIT_TEST/value=${CFE_DIR}/fsw/cfe-core/unit-test
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_APP_SRC/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_APP_SRC/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_APP_SRC/value=${APP_DIR}
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_MISSION/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_MISSION/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_MISSION/value=${ProjDirPath}
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_MISSION_INC/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_MISSION_INC/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/CFS_MISSION_INC/value=${CFS_MISSION}/config/mission_inc
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/MISSION/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/MISSION/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/MISSION/value=CFE_TST
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/MISSION_TEMPLATE_VERSION/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/MISSION_TEMPLATE_VERSION/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/MISSION_TEMPLATE_VERSION/value=3.0.1
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL/value=${OSAL_DIR}
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL_DIR/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL_DIR/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL_DIR/value=${CFS_MISSION}/OSAL
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL_SRC/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL_SRC/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/OSAL_SRC/value=${OSAL_DIR}/src/os
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/PSP_DIR/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/PSP_DIR/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/PSP_DIR/value=${CFS_MISSION}/PSP
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/UTF_SRC/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/UTF_SRC/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/UTF_SRC/value=${CFE_DIR}/tools/utf
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.548937640.47509560/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.548937640/APP_DIR/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.base.548937640/APP_DIR/operation=replace
 environment/project/cdt.managedbuild.toolchain.gnu.base.548937640/APP_DIR/value=${CFS_MISSION}/apps
