Temporary fix to softsim to build with new cmake

--- a/config/softsim/apps/CMakeLists.txt
+++ b/config/softsim/apps/CMakeLists.txt
@@ -5,7 +5,7 @@ add_subdirectory(ci ci)
 add_subdirectory(cs cs)
 add_subdirectory(ds ds)
 add_subdirectory(fm fm)
-add_subdirectory(hk hk)
+#add_subdirectory(hk hk)
 add_subdirectory(hs hs)
 add_subdirectory(lc lc)
 add_subdirectory(md md)
