Updated build system

--- a/apps/cfs_lib/fsw/for_build/CMakeLists.txt
+++ b/apps/cfs_lib/fsw/for_build/CMakeLists.txt
@@ -15,4 +15,4 @@ include_directories(${OSAL_INC_DIRS})
 include_directories(${PSP_INC_DIRS})
 	
 # Build application
-add_library(${APP_FILE} SHARED ${APP_SRC})
+add_app(${APP_FILE} SHARED ${APP_SRC})
