Updated build system

--- a/apps/eim/fsw/for_build/CMakeLists.txt
+++ b/apps/eim/fsw/for_build/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories(${OSAL_INC_DIRS})
 include_directories(${PSP_INC_DIRS})
 	
 # Build application
-add_library(${APP_FILE} SHARED ${APP_SRC} ${APP_CUSTOM_SRC})
+add_app(${APP_FILE} SHARED ${APP_SRC} ${APP_CUSTOM_SRC})
 
 add_subdirectory(../unit_test unit_test)
 
